Ädicionando TabBar e Home

--- a/ProtectMeNow/ProtectMeNow/Info.plist
+++ b/ProtectMeNow/ProtectMeNow/Info.plist
@@ -10,6 +10,9 @@
 		<string>BaiJamjuree-Medium.ttf</string>
 		<string>BaiJamjuree-Regular.ttf</string>
 		<string>BaiJamjuree-SemiBold.ttf</string>
+		<string>AzeretMono-SemiBold.ttf</string>
+		<string>AzeretMono-Regular.ttf</string>
+		<string>AzeretMono-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
